# imagik

./: .env.example  .gitignore  Cargo.toml  README  build.sh
.cargo/: config.toml
src/: aliases.rs  main.rs
src/caching/: mod.rs
src/common/: mod.rs  types.rs
src/config/: decode.rs  env.rs  mod.rs  runtime.rs
src/encoding/: mod.rs  webp.rs
src/handlers/: metrics.rs  mod.rs  params.rs  parser.rs  pipeline.rs  transform.rs
src/handlers/image/: key.rs  locks.rs  mod.rs  source.rs
src/models/: mod.rs
src/observability/: mod.rs
src/observability/metrics/: cache.rs  export.rs  labels.rs  latency.rs  mod.rs  pipeline.rs  registry.rs  request.rs  system.rs
src/pipeline/: keys.rs  mod.rs  params.rs  query.rs  runner.rs
src/routes/: mod.rs
src/routing/: mod.rs
src/storage/: mod.rs
src/storage/object/: client.rs  config.rs  disk_cache.rs  fetch.rs  key.rs  mod.rs  retry.rs
src/transforms/: aspect.rs  compress.rs  debug.rs  filter.rs  mod.rs  resize.rs  rotate.rs
src/transforms/effect/: ca.rs  grain.rs  mod.rs
src/utils/: blur.rs  color.rs  image.rs  metrics.rs  mod.rs  parser.rs  pixel.rs  resize.rs
