[package]
name = "imagik"
version = "0.1.0"
edition = "2024"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
ab_glyph = "0.2.32"
axum = "0.8.8"
aws-config = "1.8.11"
aws-credential-types = "1.2.8"
aws-sdk-s3 = "1.115.0"
blake3 = "1.8.2"
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = "0.25.9"
imageproc = "0.26.0"
libblur = { version = "0.23.1", features = ["image"] }
mimalloc = { version = "0.1.43", default-features = false, optional = true }
rand = "0.8"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
percent-encoding = "2.3.2"
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
lru = "0.12.5"
fastrand = "2"
tikv-jemallocator = { version = "0.6.1", optional = true }
tokio = { version = "1.49.0", features = ["full"] }
webp = "0.3.1"
dotenvy = "0.15.7"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
debug = false
overflow-checks = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
opt-level = 2
